--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "date-fns": "^4.1.0",
     "google-auth-library": "^10.3.0",
     "lucide-react": "^0.482.0",
-    "next": "15.2.2",
+    "next": "^15.2.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -43,7 +43,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2",
+    "eslint-config-next": "^15.2.6",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
